# enranged

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
benchmark/: CMakeLists.txt  shuffled_memory_resource.hpp  sorting_benchmarks.cpp
doc/: index.md
include/enranged/: limits.hpp  sorting.hpp  splicing.hpp
include/enranged/__detail/: concepts.hpp  flat_list.hpp  limits_impl.hpp  sorting_impl.hpp  splicing_impl.hpp
test/: CMakeLists.txt  limits_tests.cpp  linked_list.hpp  sorting_tests.cpp  splicing_tests.cpp
